# SRF

./: .gitignore  .pre-commit-config.yaml  AZURE_SNIPPETS.md  CONTRIBUTING.md  README.md  Readme.md  config.schema.json  input.yaml  main.py  pyproject.toml  requirements-codespace.txt  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: tutor.instructions.md
.github/workflows/: ci.yml  srf-run-oidc.yml  srf-run-secret.yml
docs/diagrams/: srf-scenarios.drawio
srf/auth/: provider.py
srf/config/: models.py
srf/graph/: client.py
srf/keyvault/: client.py
srf/ownership/: checker.py
srf/reporting/: mail.py
srf/rotation/: rotator.py
srf/run_id/: service.py
srf/runner/: parallel.py
tests/: conftest.py  test_auth.py  test_config.py  test_e2e.py  test_graph_client.py  test_keyvault_client.py  test_mail.py  test_ownership.py  test_rotator.py  test_run_id.py  test_runner.py
