[project]
name = "srf"
version = "0.1.0"
description = "Service Principal Secret Rotation Framework"
authors = [{ name = "SRF", email = "user@example.com" }]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "azure-identity (>=1.19.0)",
    "azure-keyvault-secrets (>=4.9.0)",
    "msgraph-sdk (>=1.5.0)",
    "pydantic (>=2.10.0)",
    "pyyaml (>=6.0.2)",
    "jsonschema (>=4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pytest (>=8.3.0)", "pytest-mock (>=3.14.0)"]
codespace = ["azure-cli (>=2.85.0)"]
